<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#313234"
    android:orientation="vertical"
    tools:context=".ui.splash.SplashActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/splash" />

    <ImageView
        android:id="@+id/ivLogoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_peercoin_text"
        android:layout_marginTop="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/peercoin" />

    <LinearLayout
        android:id="@+id/llRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:alpha="0"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:alpha="1">

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/btnCreate"
            android:layout_height="56dp"
            android:text="@string/create_new_wallet"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:backgroundTint="@color/colorAccent"
            app:cornerRadius="4dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/btnRecover"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="4dp"
            android:text="@string/recover_old_wallet"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="4dp"
            app:rippleColor="#9ff777"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>