<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_two"
    android:orientation="vertical"
    tools:context=".ui.login.pin.PinFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp">


        <TextSwitcher
            android:id="@+id/tsPin"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="38dp"
            android:animateFirstView="true"
            android:gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="10dp"
            android:textColor="@android:color/background_dark"
            android:textSize="17sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPinIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp" />

        <EditText
            android:id="@+id/etPin"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:focusableInTouchMode="true"
            android:inputType="numberPassword"
            android:maxLength="6" />


        <LinearLayout
            android:id="@+id/llCautionMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caution"
                android:textColor="@android:color/holo_red_light"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pin_message_2"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivDone"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_check_circle_black_24dp"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvSuccessMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:alpha="0"
            android:text="@string/pin_success_set"
            android:textSize="20sp" />


    </FrameLayout>

</LinearLayout>